add some new authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -58,6 +58,7 @@ Mark Lentczner <mzero@google.com>
 Michael Haro <mharo@google.com>
 Michał Rzepka <mrzepka@student.agh.edu.pl>
 Minoru TAKAHASHI <takahashi.minoru7@gmail.com>
+Miles Gao <miles962464@gmail.com>
 Monthadar Al-Jaberi <Monthadar.Al-Jaberi@infinera.com>
 OHMURA Kei <ohmura.kei@lab.ntt.co.jp>
 Olivier DESNOE <olivier.desnoe@gmail.com>
